# NautilusEngine

./: .gitignore  .travis.yml  CMakeLists.txt  CmakeLists.txt  README.md  gtestUtilities.cmake  nauUtilities.cmake
nauEngine/: PixelShader.hlsl  VertexShader.hlsl  nauEngine.sln
nauEngine/IrinAIK/: IrinAIK.vcxproj  IrinAIK.vcxproj.filters  nauNetwork.h  nauNeuralLayer.cpp  nauNeuralLayer.h  nauSkeletalNetwork.cpp  nauSkeletalNetwork.h
nauEngine/IrinAIK/include/: nauNetwork.h  nauNeuron.h
nauEngine/IrinAIK/src/: nauNetwork.cpp  nauNeuron.cpp
nauEngine/docs/: BUILD.txt  README.txt  TO_DO.md
nauEngine/nauCore/: RCa06620  nauAnimation.cpp  nauAnimation.h  nauAnimationManager.cpp  nauAnimationManager.h  nauAnimator.cpp  nauAnimator.h  nauAudioClip.cpp  nauAudioClip.h  nauAudioSource.h  nauBaseApp.h  nauCamera.h  nauClock.cpp  nauClock.h  nauCore.vcxproj  nauCore.vcxproj.filters  nauGraphicsBuffer.h  nauModelNode.h  nauScene.cpp  nauScene.h  nauShader.cpp  resource.rc
nauEngine/nauCore/include/: imgui.h  nauAnimation.h  nauAnimationBone.h  nauAnimationManager.h  nauAnimator.h  nauAudioClip.h  nauAudioSource.h  nauBaseApp.h  nauBone.h  nauBoneWeight.h  nauCamera.h  nauCameraManager.h  nauClock.h  nauCodec.h  nauComponent.h  nauConstantBufferMatrix.h  nauCoreFactory.h  nauDLLoader.h  nauDepthStencil.h  nauDepthStencilState.h  nauDepthStencilView.h  nauDevice.h  nauDeviceContext.h  nauGameObject.h  nauGraphicPass.h  nauGraphicsAPI.h  nauGraphicsBuffer.h  nauInput.h  nauInputDevice.h  nauInputLayout.h  nauInputManager.h  nauLogger.h  nauMaterial.h  nauMesh.h  nauModel.h  nauModelNode.h  nauMuscleWeight.h  nauNetwork.h  nauNeuralLayer.h  nauNeuron.h  (+32 more)
nauEngine/nauCore/src/: imgui_impl_dx11.cpp  imgui_widgets.cpp  nauAnimation.cpp  nauAnimationManager.cpp  nauAnimator.cpp  nauAudioClip.cpp  nauAudioSource.cpp  nauBaseApp.cpp  nauBone.cpp  nauCamera.cpp  nauCameraManager.cpp  nauClock.cpp  nauCodec.cpp  nauComponent.cpp  nauCoreFactory.cpp  nauDLLoader.cpp  nauDepthStencil.cpp  nauDepthStencilState.cpp  nauDepthStencilView.cpp  nauDevice.cpp  nauDeviceContext.cpp  nauGameObject.cpp  nauGraphicPass.cpp  nauGraphicsAPI.cpp  nauGraphicsBuffer.cpp  nauInput.cpp  nauInputLayout.cpp  nauInputManager.cpp  nauLogger.cpp  nauMaterial.cpp  nauMesh.cpp  nauModel.cpp  nauMuscleWeight.cpp  nauNetwork.cpp  nauNeuralLayer.cpp  nauNeuron.cpp  nauNode.cpp  nauProject.cpp  nauRasterizerState.cpp  nauRenderManager.cpp  (+19 more)
nauEngine/nauFMODAudio/: nauFMODAudio.vcxproj
nauEngine/nauGaInput/: nauGaInput.vcxproj  nauGaInput.vcxproj.filters
nauEngine/nauGaInput/include/: nauGAInputDevice.h  nauGAPrerequisites.h  nauGaInputManager.h
nauEngine/nauGaInput/src/: nauGAInputDevice.cpp  nauGaInputManager.cpp
nauEngine/nauGraphicsDX/: VertexBufferDX.cpp  VertexBufferDX.h  nauCoreFactoryDX.cpp  nauDepthStencilDX.cpp  nauDepthStencilDX.h  nauDeviceDX.cpp  nauDeviceDX.h  nauGraphicsAPIDX.cpp  nauGraphicsAPIDX.h  nauGraphicsBufferDX.cpp  nauGraphicsBufferDX.h  nauGraphicsDX.vcxproj  nauGraphicsDX.vcxproj.filters  nauInputLayoutDX.cpp  nauInputLayoutDX.h  nauPrerequisitesDX.h  nauSamplerStateDX.cpp  nauShaderDX.cpp  nauShaderDX.h  nauTextureDX.cpp  nauTextureDX.h  nauViewPortDX.cpp  nauViewPortDX.h
nauEngine/nauGraphicsDX/include/: nauCoreFactoryDX.h  nauDepthStencilDX.h  nauDeviceDX.h  nauGraphicsAPIDX.h  nauGraphicsBufferDX.h  nauInputLayoutDX.h  nauMeshDX.h  nauModelDX.h  nauPrerequisitesDX.h  nauRasterizerStateDX.h  nauRenderManagerDX.h  nauRenderTargetViewDX.h  nauSamplerStateDX.h  nauShaderDX.h  nauShaderResourceViewDX.h  nauSwapChainDX.h  nauTextureDX.h  nauUIAPIDX.h  nauViewPortDX.h
nauEngine/nauGraphicsDX/src/: nauCoreFactoryDX.cpp  nauDepthStencilDX.cpp  nauDeviceDX.cpp  nauGraphicsAPIDX.cpp  nauGraphicsBufferDX.cpp  nauInputLayoutDX.cpp  nauMeshDX.cpp  nauModelDX.cpp  nauRasterizerStateDX.cpp  nauRenderManagerDX.cpp  nauRenderTargetViewDX.cpp  nauSamplerStateDX.cpp  nauShaderDX.cpp  nauShaderResourceViewDX.cpp  nauSwapChainDX.cpp  nauTextureDX.cpp  nauUIAPIDX.cpp  nauViewPortDX.cpp
nauEngine/nauGraphics_UnitTest/: PS.hlsl  VS.hlsl  nauGraphics_UnitTest.vcxproj  nauGraphics_UnitTest.vcxproj.filters  nauTestApp.cpp  nauTestApp.h
nauEngine/nauGraphics_UnitTest/include/: imgui_internal.h  nauTestApp.h
nauEngine/nauGraphics_UnitTest/src/: imgui.cpp  imgui_draw.cpp  main.cpp  nauTestApp.cpp
nauEngine/nauInput/: nauInput.vcxproj  nauInput.vcxproj.filters
nauEngine/nauInput/include/: nauInputManager.h  nauPrerequisitesInput.h
nauEngine/nauInput/src/: nauInputManager.cpp
nauEngine/nauUtilities/: nauAABB.h  nauBox2d.h  nauFileSystem.cpp  nauFileSystem.h  nauFrustrum.cpp  nauMatrix3.cpp  nauMatrix4.cpp  nauMatrix4.h  nauPlane.cpp  nauPlane.h  nauSphere.cpp  nauTriangle.h  nauUtilities.vcxproj  nauUtilities.vcxproj.filters  nauVector2i.h  nauVector3.cpp  nauVector3.h  nauVector4.cpp  nauVector4.h
nauEngine/nauUtilities/include/: nauAABB.h  nauBox2d.h  nauCapsule.h  nauCollisions.h  nauColor.h  nauDataStream.h  nauDynamicLibrary.h  nauFileSystem.h  nauFrustrum.h  nauMath.h  nauMatrix3.h  nauMatrix4.h  nauMemoryAllocator.h  nauModule.h  nauOOBB.h  nauPath.h  nauPhysics.h  nauPlane.h  nauPlatformDefines.h  nauPlatformMath.h  nauPlatformTypes.h  nauPlatformUtilities.h  nauPrerequisitesUtil.h  nauQuaternion.h  nauRandom.h  nauRay.h  nauRotator.h  nauSphere.h  nauStdHeaders.h  nauTriangle.h  nauVector2.h  nauVector2i.h  nauVector3.h  nauVector4.h  nauWindowsFileSystem.h  nauWindowsMath.h
nauEngine/nauUtilities/src/: nauAABB.cpp  nauBox2d.cpp  nauCapsule.cpp  nauColor.cpp  nauDataStream.cpp  nauDynamicLibrary.cpp  nauFileSystem.cpp  nauFrustrum.cpp  nauMatrix3.cpp  nauMatrix4.cpp  nauMemoryAllocator.cpp  nauOOBB.cpp  nauPath.cpp  nauPlane.cpp  nauPlatformMath.cpp  nauQuaternion.cpp  nauRandom.cpp  nauRay.cpp  nauRotator.cpp  nauSphere.cpp  nauTriangle.cpp  nauVector2.cpp  nauVector2i.cpp  nauVector3.cpp  nauVector4.cpp
nauEngine/nauUtilities_UnitTest/: gtestUtilities.cmake  nauUtilities_UnitTest.vcxproj  nauUtilities_UnitTest.vcxproj.filters
nauEngine/nauUtilities_UnitTest/src/: main.cpp
